<resources>
    <string name="app_name">MobileAppOneAssignment</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Authorization</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter your username</string>
    <string name="prompt_password">Password</string>
    <string name="app_header">Simple Application</string>
    <string name="what_to_do_question">What would you like to do?</string>
    <string name="activities_text">Activities</string>

</resources>